--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_search">SearchActivity</string>
+    <string name="title_activity_search2">SearchActivity2</string>
 </resources>
